--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,62 +2,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondomenu"
+    android:gravity="center_horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.idi.galaxiamelona.MenuActivity" >
 
-     <ImageView
-         android:contentDescription="@string/desc"
-         android:id="@+id/galaxiamelonalogo"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignParentTop="true"
-         android:layout_centerHorizontal="true"
-         android:src="@drawable/logo" />   
+    <TextView
+        android:id="@+id/boton_jugar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="164dp"
+        android:background="@drawable/boton"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/jugar"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-     <TextView
-         android:id="@+id/boton_jugar"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_above="@+id/boton_instrucciones"
-         android:layout_alignLeft="@+id/boton_instrucciones"
-         android:layout_marginBottom="23dp"
-         android:background="@drawable/boton"
-         android:gravity="center_vertical|center_horizontal"
-         android:text="@string/jugar"
-         android:textAppearance="?android:attr/textAppearanceLarge" />
-     
-     <TextView
-         android:id="@+id/boton_instrucciones"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignLeft="@+id/boton_instrucciones"
-         android:layout_centerVertical="true"
-         android:background="@drawable/boton"
-         android:gravity="center_vertical|center_horizontal"
-         android:text="@string/instrucciones"
-         android:textAppearance="?android:attr/textAppearanceLarge" />
+    <TextView
+        android:id="@+id/boton_salir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/boton_instrucciones"
+        android:layout_below="@+id/boton_instrucciones"
+        android:layout_marginTop="23dp"
+        android:background="@drawable/boton"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/salir"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-     <TextView
-         android:id="@+id/boton_salir"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_alignTop="@+id/melocuenta"
-         android:layout_centerHorizontal="true"
-         android:background="@drawable/boton"
-         android:gravity="center_vertical|center_horizontal"
-         android:text="@string/salir"
-         android:textAppearance="?android:attr/textAppearanceLarge" />
-     
-     <ImageView
-         android:id="@+id/melocuenta"
-         android:layout_width="314dp"
-         android:layout_height="wrap_content"
-         android:layout_alignLeft="@+id/galaxiamelonalogo"
-         android:layout_alignParentBottom="true"
-         android:contentDescription="@string/desc"
-         android:src="@drawable/melocuenta" />
+    <TextView
+        android:id="@+id/boton_instrucciones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/boton_jugar"
+        android:layout_below="@+id/boton_jugar"
+        android:layout_marginTop="23dp"
+        android:background="@drawable/boton"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/instrucciones"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
