--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,6 +9,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.idi.galaxiamelona.MenuActivity" >
+    
+    <TextView
+        android:id="@+id/texto"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/texto"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/boton_jugar"
